# FINPAK

./: .cursorrules  .gitignore  README.md  project_setup.sh  pyproject.toml  requirements.txt  setup.py  test_data.csv  test_data.parquet  test_update_data.csv  test_update_data.parquet  yahoo.py
FINPAK/: README.md
PLANS/: assessment_plan_targets_features_checkpoint.md  assessment_plan_v8_improvements.md
finpak/analysis/: __init__.py
finpak/analysis/indicators/: __init__.py
finpak/analysis/indicators/fundamental/: __init__.py
finpak/analysis/indicators/technical/: aggregate.py
finpak/data/fetchers/: data_demo.ipynb  fetchers_verification.ipynb  yahoo.py  yahoo_data.py  yfinance_README.md
finpak/data/fetchers/data_store/: AAPL.csv  IBM.csv
finpak/performance/: __init__.py
finpak/performance/metrics/: __init__.py
finpak/performance/reporting/: __init__.py
finpak/performance/tracking/: __init__.py
finpak/pipelines/: __init__.py  n_day_high_test.ipynb  n_day_highs_in_k_days.py
finpak/trading/signals/: __init__.py
finpak/utils/: __init__.py  calculations.py
project_root/: setup.py
project_root/src/financial_analysis/: __init__.py
project_root/src/financial_analysis/analysis/: __init__.py
project_root/src/financial_analysis/performance/: __init__.py
project_root/src/financial_analysis/trading/: __init__.py
src/financial_analysis/data/fetchers/: yahoo.py
src/financial_analysis/utils/: calculations.py  constants.py
src/finpak/FINPAK.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/finpak/data/: README.md
src/finpak/lstm_predictions/: lstm_nb1.ipynb  lstm_nb1.py  lstm_nb1a.py  lstm_nb2.ipynb  lstm_nb2.py  lstm_nb2b.ipynb  lstm_nb2b.py  outline.py
src/finpak/pipelines/: n_day_high_test.ipynb
src/finpak/trading/: __init__.py
src/finpak/transformer_predictions/: TODO.md  USAGE.md  configs.py  configs_v9.py  data_loading.py  data_loading_diff_from_mf.txt  data_loading_v5.py  data_loading_v6.py  data_loading_v7.py  data_loading_v8.py  data_loading_v9.py  decent_checkpoints.py  early_stopping.py  early_stopping_old.py  earlystopping_trainpy_logic.md  ensembling.py  fourier_head.py  fourier_transformer.py  hymba_modeling_reference.py  inf_nb.ipynb  inf_nb_v5.ipynb  inf_nb_v7.py  inf_nb_v7_forward.py  inf_nb_v8_forward.py  inference.py  inference_v4.py  inference_v5.py  inference_v6.py  main.py  main_20241106.py  main_v4.py  main_v4_R.py  main_v4_R_mixln.py  main_v4_R_mixln_lrnres.py  main_v4_mlx.py  main_v5.py  main_v6.py  main_v7.py  main_v8.py  main_v9.py  (+59 more)
src/finpak/visualization/: __init__.py
src/tests/: README.md
tests/: README.md
tests/financial_analysis/analysis/: __init__.py
tests/financial_analysis/utils/: __init__.py
(+34 files in other folders)
