[project]
name = "finpak"
version = "0.0.1"
description = "Financial Data Analysis Toolkit"
readme = "README.md"
authors = [
    { name = "Jeff Coggshall", email = "thenextlocalminima@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "polars>=1.9.0,<2.0.0",
    "yfinance>=0.2.4,<0.3.0",
    "scipy>=1.14.0,<2.0.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.9.0,<4.0.0",
    "gunicorn>=22.0.0",
    "requests>=2.27.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-dotenv>=1.0.0",
    "pytest-cov>=5.0.0",
    "python-json-logger>=2.0.7",
    "google-generativeai>=0.8.0,<0.9.0",
    "google-cloud-aiplatform>=1.4.0,<2.0.0",
    "ratelimit>2.2.0",
    "ipykernel>=6.29,<7.0",
    "ipywidgets>=7.8.0",
    "instructor>=1.4.3,<2.0.0",
    "notebook>=7.2.0,<8.0.0",
    "torch>=2.9.1,<3.0.0",
    "torchvision>=0.24.1,<0.25.0",
    "torchaudio>=2.9.1,<3.0.0",
    "transformers>=4.46.3,<5.0.0",
    "mlx>=0.21.0",
    "mlx-lm>=0.20.1",
    "wandb>=0.19.1",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0,<0.7.0",
    "pytest>=8.2.2",
    "mypy>=1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finpak"]

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 120

# Add in this section to exclude specific files or directories
exclude = [
    "__pypackages__",
    "src/DATA/",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D103",
    "D104",
    "D100",
    "D101",
    "N806",
    "N803",
    "E501",
    "D107",
    "D102",
    "B904",
    "B008",
    "E402",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "E712", # == for asserts
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
